--- a/config.toml
+++ b/config.toml
@@ -14,8 +14,8 @@ disable404 = true
 [params]
 
 # Meta
-    description = "Hugo Responsive Resume/CV Theme for Developers"
-    author = "Pavel Kanyshev"
+    description = "CV Markus Sommerfeld"
+    author = "Markus Sommerfeld"
 
 # Theme styles
 
@@ -142,15 +142,16 @@ disable404 = true
 # You may use markdown in summary, details and intro fields. But don't overdose, it's resume!:)
 
 # Summary section
+```
 [params.summary]
     enable = true
     icon = "fa-user"
     title = "Career Profile"
     summary = "Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology. <br/>As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
+```
 
-	# 
-	# I acquired technical certification and testing experience through work in Japan and Germany. I am competent at handling administrative tasks and work efficiently in multicultural teams.
-	
+
+
 	# Experiences section
 	[params.experiences]
 	    enable = true
@@ -238,83 +239,106 @@ disable404 = true
 
    
 
+# Publication section
 
+ 
 
-   [[params.publications.list]]
+```
+  [[params.publications.list]]
 	title = "Improving mesoscale wind speed forecasts using lidar-based observation nudging for airborne wind energy systems"
 	url = "https://doi.org/10.5194/wes-4-563-2019"
 	tagline = "Wind Energy Science, Volume 4, Issue 4, October 2019"
 
-	[[params.publications.list]]
-	title = "LiDAR-based characterization of mid-altitude wind conditions for airborne wind energy systems"
-	url = "https://doi.org/10.1002/we.2343"
-	tagline = "Wiley Wind Energy: Volume22, Issue8, August 2019"
-	
-	[[params.publications.list]]
-	title = "High Altitude LiDAR Measurements of the Wind Conditions for Airborne Wind Energy Systems"
-	url = "http://www.awec2017.com/presentations/markus-sommerfeld"
-	tagline = "Airborne Wind Energy Conference 2017"
-	
-	[[params.publications.list]]
-	title = "LES generated turbulent inflow fields from mesoscale modeling driven by LiDAR measurements"
-	url = "http://www.awec2017.com/presentations/markus-sommerfeld-2"
-	tagline = "Airborne Wind Energy Conference 2017"
-	
-	[[params.publications.list]]
-	title = "AWESome potential: Airborne wind energy’s opportunities and challenges"
-	url = "https://youtu.be/UiriQHZMcs0"
-	tagline = "Pacific Institute for Climate Solutions, March 2018"
-	
-	# Presentation section
-	#[params.presentations]
-	#enable = true
-	#icon = "fa-presentation"
-	#title = "Presentations"
-	#intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
-	#
-	#[[params.presentations.list]]
-	#    title = "Hugrid"
-	#    url = "https://github.com/aerohub/hugrid"
-	#    tagline = "Grid theme for Hugo. It's a kind of boilerplate to perform anyone or anything quickly. Portfolio, collection, bookmarks, contacts and so on"
-	
-	# Skills section
-	[params.skills]
-	    enable = true
-	    icon = "fa-rocket"
-	    title = "Skills & Proficiency"
-	
-	    [[params.skills.list]]
-	    skill = "Python & Matlab"
-	    level = "90%"
-	            
-	    [[params.skills.list]]
-	    skill = "CAD software: Catia, Solid Edge "
-	    level = "70%"
-	
-	    [[params.skills.list]]
-	    skill = "CFD: ANSYS Fluent"
-	    level = "80%"
-	
-	    [[params.skills.list]]
-	    skill = "Mesoscale weather modeling: WRF"
-	    level = "80%"
-	
-	    [[params.skills.list]]
-	    skill = "Ruby on Rails"
-	    level = "75%"
-	
-	    [[params.skills.list]]
-	    skill = "Sketch & Photoshop"
-	    level = "60%"
-	
-	# Footer section
-	
-	# The original template is released under the Creative Commons Attribution 3.0 License.
-	# Please keep the original attribution link when using for your own project.
-	# If you'd like to use the template without the attribution,
-	# you can check out other license options via template author's website: themes.3rdwavemedia.com
-	# 
-	# As for Hugo port you may rewrite the "Ported for..." line with setting your name below.
-	
-	[params.footer]
-	    copyright = ""
+[[params.publications.list]]
+title = "LiDAR-based characterization of mid-altitude wind conditions for airborne wind energy systems"
+url = "https://doi.org/10.1002/we.2343"
+tagline = "Wiley Wind Energy: Volume22, Issue 8, August 2019"
+
+[[params.publications.list]]
+title = "High Altitude LiDAR Measurements of the Wind Conditions for Airborne Wind Energy Systems"
+url = "http://www.awec2017.com/presentations/markus-sommerfeld"
+tagline = "Airborne Wind Energy Conference 2017"
+
+[[params.publications.list]]
+title = "LES generated turbulent inflow fields from mesoscale modeling driven by LiDAR measurements"
+url = "http://www.awec2017.com/presentations/markus-sommerfeld-2"
+tagline = "Airborne Wind Energy Conference 2017"
+
+[[params.publications.list]]
+title = "AWESome potential: Airborne wind energy’s opportunities and challenges"
+url = "https://youtu.be/UiriQHZMcs0"
+tagline = "Pacific Institute for Climate Solutions, March 2018"
+```
+
+
+
+# Presentation section
+```
+#[params.presentations]
+#enable = true
+#icon = "fa-presentation"
+#title = "Presentations"
+#intro = "**You can list your side projects or open source libraries in this section.** Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus"
+#
+#[[params.presentations.list]]
+
+#    title = "Hugrid"
+
+#    url = "https://github.com/aerohub/hugrid"
+
+#    tagline = "Grid theme for Hugo. It's a kind of boilerplate to perform anyone or anything quickly. Portfolio, collection, bookmarks, contacts and so on"
+```
+
+
+
+# Skills section
+```
+[params.skills]
+    enable = true
+    icon = "fa-rocket"
+    title = "Skills & Proficiency"
+
+    [[params.skills.list]]
+    skill = "Python & Matlab"
+    level = "90%"
+            
+    [[params.skills.list]]
+    skill = "CAD software: Catia, Solid Edge "
+    level = "70%"
+
+    [[params.skills.list]]
+    skill = "CFD: ANSYS Fluent"
+    level = "80%"
+
+    [[params.skills.list]]
+    skill = "Mesoscale weather modeling: WRF"
+    level = "80%"
+
+    [[params.skills.list]]
+    skill = "Ruby on Rails"
+    level = "75%"
+
+    [[params.skills.list]]
+    skill = "Sketch & Photoshop"
+    level = "60%"
+```
+
+# Footer section
+
+```
+# The original template is released under the Creative Commons Attribution 3.0 License.
+
+# Please keep the original attribution link when using for your own project.
+
+# If you'd like to use the template without the attribution,
+
+# you can check out other license options via template author's website: themes.3rdwavemedia.com
+
+# 
+
+# As for Hugo port you may rewrite the "Ported for..." line with setting your name below.
+
+[params.footer]
+    copyright = "Markus Sommerfeld"
+```
+
