--- a/config.toml
+++ b/config.toml
@@ -123,7 +123,7 @@ disable404 = true
        level = "2"
     
     # Interests section
-		[params.interests]
+		[[params.interests]]
         enable = true
         title = "Interests"
     
