--- a/config.toml
+++ b/config.toml
@@ -32,8 +32,8 @@ disable404 = true
     [params.profile]
         name = "Markus Sommerfeld"
         tagline = "Researcher, Engineer and Father"
-		birthday = "3 February 1987"
-		location = "Victoria, BC Canada"
+		#birthday = "3 February 1987"
+		#location = "Victoria, BC Canada"
         avatar = "profile.png"
     
     # Contact section
