--- a/config.toml
+++ b/config.toml
@@ -39,6 +39,13 @@ disable404 = true
     # Contact section
     [params.contact]
         enable = true
+		
+		[[params.contact.list]]
+        class = "website"
+        icon = "fa-birthday-cake"
+        url = ""
+        title = "Birthday: 3 February 1987"
+
     
         [[params.contact.list]]
         class = "email"
@@ -46,6 +53,8 @@ disable404 = true
         url = "mailto: msommerf@uvic.ca"
         title = "msommerf@uvic.ca"
     
+	
+	
     #    [[params.contact.list]]
     #    class = "phone"
     #    icon = "fa-phone"
@@ -151,7 +160,7 @@ disable404 = true
 		enable = true
 		icon = "fa-user"
 		title = "Career Profile"
-		summary = "Researcher, Engineer and Futurist driven by curiosity, motivated by improving quality of life for everybody and exited about technology. <br/>As a researcher I aim to reduce the impact of climate change through offering consistent, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
+		summary = "Researcher, Engineer and Futurist driven by curiosity motivated by improving quality of life for everybody and exited about technology. <br/>As a researcher I aim to reduce the impact of climate change through offering dependable, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
 
 
 
