--- a/config.toml
+++ b/config.toml
@@ -43,8 +43,16 @@ disable404 = true
 		[[params.contact.list]]
         class = "website"
         icon = "fa-birthday-cake"
-        url = ""
-        title = "Birthday: 3 February 1987"
+        #url = ""
+        title = "3 February 1987"
+		
+		[[params.contact.list]]
+        class = "website"
+        icon = "fa-location-arrow"
+        #url = ""
+        title = "Victoria, BC Canada"
+		
+		
 
     
         [[params.contact.list]]
