--- a/config.toml
+++ b/config.toml
@@ -50,7 +50,8 @@ disable404 = true
         class = "website"
         icon = "fa-location-arrow"
         #url = ""
-        title = "Victoria, BC Canada <br /> 	"
+        title = "Victoria, BC Canada 
+		"
 		
 		
 
