--- a/config.toml
+++ b/config.toml
@@ -46,10 +46,12 @@ disable404 = true
         title = "profile_info"		
     
         [[params.profile_info.list]]
+		class = "birthday"
 		icon = "fa-birthday-cake"
         interest = "1987 February 3"
 		
 		[[params.profile_info.list]]
+		class = "location"
 		icon = "fa-map-marked"
         interest = "Victoria, BC Canada"
 		
@@ -65,8 +67,6 @@ disable404 = true
         #url = ""
         #title = "Victoria, BC Canada"
 		
-		
-
     
         [[params.contact.list]]
         class = "email"
