--- a/config.toml
+++ b/config.toml
@@ -48,12 +48,12 @@ disable404 = true
         [[params.profile_info.list]]
 		class = "birthday"
 		icon = "fa-birthday-cake"
-        interest = "1987 February 3"
+        title = "1987 February 3"
 		
 		[[params.profile_info.list]]
 		class = "location"
 		icon = "fa-map-marked"
-        interest = "Victoria, BC Canada"
+        title = "Victoria, BC Canada"
 		
 		#[[params.contact.list]]
         #class = "website"
