updated profile info

--- a/config.toml
+++ b/config.toml
@@ -52,7 +52,7 @@ disable404 = true
 		
 		[[params.profile_info.list]]
 		class = "location"
-		icon = "fa-map-marker"
+		icon = "fa-globe"
         title = "Victoria, BC Canada"
 		
 		#[[params.contact.list]]
