--- a/config.toml
+++ b/config.toml
@@ -53,7 +53,7 @@ disable404 = true
 		[[params.profile_info.list]]
 		class = "location"
 		icon = "fa-map-marker"
-        title = " Victoria, BC, Canada"
+        title = " <br/> Victoria, BC, Canada"
 		
 		#[[params.contact.list]]
         #class = "website"
@@ -181,7 +181,7 @@ disable404 = true
 		enable = true
 		icon = "fa-user"
 		title = "Career Profile"
-		summary = "Researcher, Engineer and Futurist driven by curiosity motivated by improving quality of life for everybody and exited about technology. <br/>As a researcher I aim to reduce the impact of climate change through offering dependable, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results.As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
+		summary = "Researcher, Engineer and Futurist driven by curiosity motivated by improving quality of life for everybody and exited about technology. <br/> As a researcher I aim to reduce the impact of climate change through offering dependable, sustainable energy at a lower cost. As an engineer I took responsibility organizing and executing certification test as well as independently solving interesting design challenges to quickly provide outstanding results. As a futurist I am hopeful that we will be able to overcome our challenges by providing better, sustainable services while improving the quality of life for everyone."    
 
 
 
